--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -158,7 +158,7 @@ const friends = friendsData.content;
         <div class="text-center">
           <p class="text-base-content/80 mb-4">
             想要和我申请友链的话，在下面的仓库里根据说明来提交issue，或者在<a href="mailto:zsx@zhzsx.cn" target="_blank" rel="noopener noreferrer" class="link link-primary">邮箱</a>来找我。<br>
-            至于贡献值的话，可以在<a href="https://qr-pay.kemeow.top/" target="_blank" rel="noopener noreferrer" class="link link-primary">网站</a>给我赞助或者在我的<a href="https://github.com/zsxjun/zsx-Frosti" target="_blank" rel="noopener noreferrer" class="link link-primary">博客源码</a>提交帮助~
+            至于贡献值的话，可以在<a href="https://qr-pay.kemeow.top/" target="_blank" rel="noopener noreferrer" class="link link-primary">网站</a>给我赞助或者在我的<a href="https://github.com/zsxjun/zsxjun-Frosti" target="_blank" rel="noopener noreferrer" class="link link-primary">博客源码</a>提交帮助~
           </p>
           <a
             href="https://github.com/kemiaofxjun/blog-friends/"
