--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -164,7 +164,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
           <span>博客源码</span>
         </h2>
 
-        <GitHubStats username="zsxjun" repositoryName="zsx-Frosti" showLanguages={true} showContributors={true} />
+        <GitHubStats username="zsxjun" repositoryName="zsxjun-Frosti" showLanguages={true} showContributors={true} />
       </section>
     </div>
   </MainCard>
