--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -7,6 +7,7 @@ import { type CollectionEntry, getCollection } from "astro:content";
 import dayjs from "@utils/dayjs";
 import { DATE_FORMAT } from "@config";
 import MainCard from "@/components/MainCard.astro";
+import waline from "@/components/Waline.astro";
 
 export async function getStaticPaths() {
   const posts = await getCollection("blog");
@@ -62,4 +63,8 @@ const url = new URL(`/${blog.slug}`, Astro.url.origin);
       </div>
     </div>
   </MainCard>
+  <section class="comments">
+    <h2>Comments</h2>
+    <waline serverURL="https://waline.zhzsx.cn" />
+  </section>
 </BaseLayout>
