--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -31,8 +31,8 @@ import RepositoryCard from "@/components/mdx/RepositoryCard.astro";
       </h2>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        <RepositoryCard repo="zsxjun/zsx-Frosti" isPinned={true} />
-        <RepositoryCard repo="zsxjun/cloud-mails" isPinned={true} />
+        <RepositoryCard repo="zsxjun/zsxjun-Frosti" isPinned={true} />
+        <RepositoryCard repo="zsxjun/zsxjun-SaroProck" isPinned={true} />
         <!-- <RepositoryCard repo="EveSunMaple/astion-static" />
         <RepositoryCard repo="EveSunMaple/astro-update-theme" />
         <RepositoryCard repo="EveSunMaple/Word-testing-application" />
